--- a/charts/auth-fastapi-2/Chart.yaml
+++ b/charts/auth-fastapi-2/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: auth-fastapi-2
-description: A Helm chart for Kubernetes
+description: Helps you to deploy Auth-fastapi-2 on k8s
 
 # A chart can be either an 'application' or a 'library' chart.
 #
